# myday-api-wrapper

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: main.rs  myday.rs
src/myday/: mod.rs  session.rs  sessions.rs
