[package]
name = "myday-api-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
jwt = "0.16"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate"] }
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1", features = ["derive"] }
