[package]
name = "myday-api-wrapper"
version = "0.5.0"
edition = "2021"

[dependencies]
actix-web = "4"
env_logger = "0.11"
jwt = "0.16"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
